Style title better

--- a/public/index.html
+++ b/public/index.html
@@ -56,11 +56,11 @@
   <!-- Content -->
 
   <!-- About -->
-  <div style="padding-top: 60px; margin-top: 60px; position: relative; overflow-x: hidden;">
+  <div style="padding-top: 60px; margin-top: 60px; position: relative;">
     <div class="w3-container" style="margin-bottom: 90px;">
       <div class="w3-row">
         <div class="w3-col m8 l8">
-          <div class="slogan">Engage. Explore. Evolve.</div>
+          <div class="slogan">Engage <br/> Explore <br/> Evolve</div>
           <h2 class="section--title">Who We Are</h2>
           <p>
             The EarthVectors core team brings nearly 100 years of software engineering experience and 30
